consolidate NEF dynamics derivations

--- a/theory/NEF_dynamics_adaptation.ipynb
+++ b/theory/NEF_dynamics_adaptation.ipynb
@@ -27,54 +27,23 @@
     },
     {
      "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Summary of results"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "For the linear dynamical system\n",
-      "\n",
-      "$$\\dot{x}=Ax+Bu$$\n",
-      "\n",
-      "and synaptic time constant $\\tau$, NEF implements the system using neurally plausible transformations \n",
-      "\n",
-      "\\begin{align}\n",
-      "A' &= \\tau A+I \\\\\n",
-      "B' &= \\tau B \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "To implement the first order system\n",
-      "\n",
-      "$$\\tau_{sys}\\dot{x}=-x+u$$\n",
-      "\n",
-      "use\n",
-      "\n",
-      "\\begin{align}\n",
-      "A' &= -\\frac{\\tau}{\\tau_{sys}} + I \\\\\n",
-      "B' &= \\frac{\\tau}{\\tau_{sys}} \\\\\n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "heading",
      "level": 1,
      "metadata": {},
      "source": [
-      "NEF dynamics"
+      "Setting the speed of a system"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "NEF specifies how to map dynamical systems on to recurrent neural networks. In general, linear dynamical systems can be specified with \n",
+      "Linear dynamical systems are specified with \n",
       "\n",
       "$$\\dot{x}=Ax+Bu$$\n",
+      "\n",
+      "or in the complex frequency domain with\n",
+      "\n",
+      "$$sX(s) = AX(s)+BU(s)$$\n",
       "\n",
       "$A$ governs the stability and speed of the system. For stability (only considering 1D for now...), $A<0$. To make a stable system faster, make $|A|$ bigger.\n",
       "\n",
@@ -86,58 +55,7 @@
       "\n",
       "$$B=-A$$\n",
       "\n",
-      "\n",
-      "In the complex frequency domain,\n",
-      "\n",
-      "$$sX(s) = AX(s)+BU(s)$$\n",
-      "\n",
-      "As discussed in the NEF book, a recurrent neural network will have dynamics governed by the impulse reponse of its synapses.\n",
-      "\n",
-      "$$x=h(t)*[Ax+Bu]$$\n",
-      "\n",
-      "where \n",
-      "\n",
-      "$$h(t)=\\frac{1}{\\tau}e^{-t/\\tau}u(t)$$\n",
-      "\n",
-      "Using the laplace transform,\n",
-      "\n",
-      "\\begin{align}\n",
-      "X(s) &= H(s)[AX(s)+BU(s)] \\\\\n",
-      " &= \\frac{1}{\\tau s+1}[AX(s)+BU(s)] \\\\\n",
-      "(\\tau s+1)X(s) &= AX(s)+BU(s) \\\\\n",
-      "\\tau sX(s) + X(s) &= AX(s)+BU(s) \\\\\n",
-      "\\tau sX(S) &= (A-I)X(s) + BU(s) \\\\\n",
-      "sX(s) &= \\frac{A-I}{\\tau}X(s) + \\frac{B}{\\tau}U(s) \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "\n",
-      "To match the neurally plausible dynamical system to the specified dynamical system, we set\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\frac{A'-I}{\\tau} &= A \\\\\n",
-      "A' &= \\tau A + I \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "and\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\frac{B'}{\\tau} &= B \\\\\n",
-      "B' = \\tau B \\\\\n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
-      "Setting the speed of a system"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "NEF specifies [how](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/theory/NEF_dynamics.ipynb) to map dynamical systems on to recurrent neural networks. \n",
       "To control the speed of an NEF network, we formulate the network as the dynamical system\n",
       "\n",
       "\\begin{align}\n",
@@ -145,7 +63,7 @@
       "\\dot{x} &= -\\frac{1}{\\tau_{sys}}x+\\frac{1}{\\tau_{sys}}u \\\\\n",
       "\\end{align}\n",
       "\n",
-      "That is, we want the system to respond to its input with speed $1/\\tau_{sys}$, which is independent of the synaptic time constant $\\tau$.\n",
+      "That is, we want the system to respond to its input with speed $1/\\tau_{sys}$, which is independent of the synaptic time constant $\\tau_{syn}$.\n",
       "\n",
       "For this system\n",
       "\n",
@@ -157,8 +75,8 @@
       "so\n",
       "\n",
       "\\begin{align}\n",
-      "A' &= -\\frac{\\tau}{\\tau_{sys}} + I \\\\\n",
-      "B' &= \\frac{\\tau}{\\tau_{sys}} \\\\\n",
+      "A' &= -\\frac{\\tau_{syn}}{\\tau_{sys}} + I \\\\\n",
+      "B' &= \\frac{\\tau_{syn}}{\\tau_{sys}} \\\\\n",
       "\\end{align}"
      ]
     },
