--- a/theory/NEF_dynamics_tau_mismatch.ipynb
+++ b/theory/NEF_dynamics_tau_mismatch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d2ce91afa7a59dc02f9983190a767861bf061067c2ba20e35d97930377ce45c9"
+  "signature": "sha256:bab62d4fd96b17b9328ebc89a6158bdf9f7c8fb941fbf52f7d8e2b93035a20e0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -47,72 +47,6 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Background"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "To implement the linear dynamical system\n",
-      "\n",
-      "![linear system](figures/linear_system.png \"linear system\")\n",
-      "\n",
-      "using the neurally plausible system\n",
-      "\n",
-      "![neural system](figures/neural_system.png \"neural system\")\n",
-      "\n",
-      "we find the $A'$ and $B'$ that make the neural system behave like the linear dynamical system. $h(t)=\\frac{1}{\\tau}e^{-t/\\tau}s(t)$ is the synaptic impulse response where $s(t)$ is the step function."
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "The the linear dynamical system is governed by\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\dot{x}(t) &= Ax(t)+Bu(t) \\\\\n",
-      "sX(s) &= AX(s) + BU(s) \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "The neural system is governed by\n",
-      "\n",
-      "\\begin{align}\n",
-      "x(t) &= h(t)*[A'x(t)+B'u(t)] \\\\\n",
-      "X(s) &= H(s)[A'X(s)+B'U(s)] \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "Rearranging,\n",
-      "\n",
-      "\\begin{align}\n",
-      "X(s) &= H(s)[A'X(s)+B'U(s)] \\\\\n",
-      " &= \\frac{1}{\\tau s+1}[A'X(s)+B'U(s)] \\\\\n",
-      "(\\tau s+I)X(s) &= A'X(s)+B'U(s) \\\\\n",
-      "sX(s) &= \\frac{1}{\\tau}(A'-1)X(s)+\\frac{1}{\\tau}B'U(s)] \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "To make the neural system implement the linear system, we compare the rearranged neural system equation with the linear system equation and set\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\frac{1}{\\tau}(A'-1) &= A  \\\\\n",
-      "A'-1 &= \\tau A \\\\\n",
-      "A' &= \\tau A + 1 \\\\\n",
-      "\\end{align}\n",
-      "\n",
-      "and\n",
-      "\n",
-      "\\begin{align}\n",
-      "\\frac{1}{\\tau}B' &= B \\\\\n",
-      "B' &= \\tau B \\\\\n",
-      "\\end{align}"
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 1,
-     "metadata": {},
-     "source": [
       "A neural system with mismatched $\\tau$ implements higher order dynamics "
      ]
     },
@@ -120,6 +54,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "The NEF implementation of dynamical systems is described [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/theory/NEF_dynamics.ipynb)\n",
+      "\n",
       "First, we'll consider the case where there are two different time constants governing the neural system. Then we'll generalize to arbitrary number of different time constants.\n",
       "\n",
       "In the case of two time constants, $\\tau_1$ and $\\tau_2$, we have the neural system\n",
