--- a/theory/NEF_dynamics_observer.ipynb
+++ b/theory/NEF_dynamics_observer.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2c2bce44fa705347ecf546af4d3d11641d0117b0def7861412c6487819b126ab"
+  "signature": "sha256:470c6c6b07ad146ba7e9ac079bab4f438fd5b616e4d2bd6f2ea16b7207a4a58a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -68,7 +68,7 @@
       "X(s) &= \\frac{H(s)B'}{1-H(s)A'}U(s) \\\\\n",
       " &= \\frac{B'}{1/H(s)-A'}U(s) \\\\\n",
       " &= \\frac{B'}{\\tau s+1-A'}U(s) \\\\\n",
-      " &= \\frac{B'/(1-A')}{\\tau/(1-A')s+1}U(s) \\\\\n",
+      " &= \\frac{B'/(1-A')}{(\\tau/(1-A'))s+1}U(s) \\\\\n",
       "\\end{align}\n",
       "\n",
       "We use $A'$ and $B'$ to implement any linear dynamical system.\n",
