update observer notebook with nengo/hardware expansions

--- a/theory/NEF_dynamics_observer.ipynb
+++ b/theory/NEF_dynamics_observer.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:470c6c6b07ad146ba7e9ac079bab4f438fd5b616e4d2bd6f2ea16b7207a4a58a"
+  "signature": "sha256:5c6830b06fd307cb9cb4c9deca3ee97f7656fb91f11970315ced2e75f775c1b3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,7 +45,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "NEF theory vs hardware implementation"
+      "NEF recurrent neural system analysis"
      ]
     },
     {
@@ -73,32 +73,68 @@
       "\n",
       "We use $A'$ and $B'$ to implement any linear dynamical system.\n",
       "\n",
-      "However, there are key differences between this formulation and a hardware implementation. \n",
-      "\n",
-      "The standard nengo implementation is consistent with this formulation because the synaptic filtering is applied immediately to the output spikes of the neurons before transmitting to neurons' targets. That is, neurons do not send spikes to other neurons but rather send state space values. This configuration implies:\n",
-      " - there is only one filter between the somas of different network layers\n",
-      " - $x(t)$ is represented by the currents in the population's dendrites"
+      "Although standard nengo is consistent with this formulation, there are key differences between this formulation and our hardware implementation. "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Standard nengo is consistent with NEF recurrent neural system"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In our hardware implementation however, we cannot directly observe the currents of a population's dendrites that represent $x(t)$. We only have access to the population's spikes which we filter to convert into meaningful state space values. Let's call this filter 'the observer'. We implement\n",
+      "First, we expand the standard nengo implementation and note whether each link is sending spikes or state space values.\n",
+      "\n",
+      "![standard nengo implementation](figures/neural_system_nengo_expanded.png \"standard nengo implementation\")\n",
+      "\n",
+      "where 'target' could be either the next Ensemble's somas or a Node/Probe. This figure has a few simplifications. First, I only show one neuron in the recurrent loop instead of an Ensemble of neurons. Second, I leave out the encoders/decoders. These first two simplifications are valid because we pick decoders that combine activity from the neurons so that the Ensemble's output is linear. Third, I assume that the target is using the same synaptic time constant as the recurrent connection.\n",
+      "\n",
+      "The nengo implementation is consistent with the NEF dynamical neural system formulation because the synaptic filtering is applied immediately to the output spikes of the neurons before transmitting to neurons' targets. Neurons do not send spikes to other neurons but rather send state space values. Because the state space values $x(t)$ and $u(t)$ are defined after the synapse and before the soma, we can say that they are represented by the set of currents in the dendrites of an Ensemble's neurons."
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Hardware implementation is inconsistent with the NEF recurrent neural system"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Expanding the hardware implementation and and noting its data types, \n",
+      "\n",
+      "![hardware implementation](figures/neural_system_spiking_expanded.png \"hardware implementation\")\n",
+      "\n",
+      "Here, we represent $x(t)$ and $u(t)$ with spikes instead of the currents in a population's dendrites. As a consequence, to pass $x(t)$ to the target, which could be a soma or Node/Probe as before, we filter the spikes that represent $x(t)$. That is, we effectively implement\n",
       "\n",
       "![neural system with observer](figures/neural_system_output_synapse.png \"neural system with observer\")\n",
       "\n",
-      "where $h_{obs}(t)$ is our observer that converts spikes into state space values and $y(t)$ is our observation. We would like the observer output, $y(t)=x(t)$, but unfortunately, putting the obsever in line with the synapse means that the observed output dynamics are the system dynamics further filtered by the observer, so that \n",
+      "where $h_{obs}(t)$ is our observer that converts spikes into state space values and $y(t)$ is our observation that could either be passed to another soma or read out. To be consistent with the NEF recurrent neural system formulation, we would like $y(t)=x(t)$, but the observed output dynamics are the system dynamics further filtered by the observer."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " That is,\n",
       "\n",
       "\\begin{align}\n",
       "Y(s) &= H_{obs}(s)X(s) \\\\\n",
-      " &= H_{obs}(s)\\frac{B'/(1-A')}{\\tau/(1-A')s+1}U(s) \\\\\n",
-      " &= \\frac{1}{\\tau_{obs}s+1}\\frac{B'/(1-A')}{\\tau/(1-A')s+1}U(s) \\\\\n",
+      " &= H_{obs}(s)\\frac{B'/(1-A')}{(\\tau/(1-A'))s+1}U(s) \\\\\n",
+      " &= \\frac{1}{\\tau_{obs}s+1}\\frac{B'/(1-A')}{(\\tau/(1-A'))s+1}U(s) \\\\\n",
       "\\end{align}\n",
       "\n",
       "which we recognize as a second order low pass filtered version of $U(s)$ because the denominator will be a second order polynomial of $s$.\n",
       "\n",
-      "The NEF book (at the end of section 8.1.3 Revisiting levels of analysis,) recognizes an equivalent issue where there is both a \"decoding\" synapse and an \"encoding\" synapse between layers of somas but brushes the issue aside. Unfortunately, for applications such as robot control where timing and precision are critical, we cannot ignore this issue (at least until we develop robot controllers that are robust to delays). Another use case is when we want to observe the system using a long synaptic time constant to reduce noise but not pay the cost of extra latency.\n"
+      "The NEF book (at the end of section 8.1.3 Revisiting levels of analysis,) recognizes an equivalent issue where there is both a \"decoding\" synapse and an \"encoding\" synapse between layers of somas but brushes the issue aside. Unfortunately, for applications such as robot control where timing and precision are critical, we cannot ignore this issue (at least until we develop robot controllers that are robust to delays). Another use case is when we want to observe the system using a long synaptic time constant to reduce noise but not pay the cost of extra latency."
      ]
     },
     {
@@ -147,6 +183,17 @@
       "\\end{align}\n",
       "\n",
       "as we intend."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Applying this to the hardware implementation, we would configure our network as\n",
+      "\n",
+      "![hardware implementation consistent with NEF neural system formulation](figures/neural_system_spikes_parallel_expanded.png \"hardware implementation consistent with NEF neural system formulation\")\n",
+      "\n",
+      "where now the target sees the same dynamics as the soma in the recurrent loop."
      ]
     },
     {
