--- a/design/figures/neural_system.tex
+++ b/design/figures/neural_system.tex
@@ -1,4 +1,4 @@
-\documentclass[convert={density=300,size=800x300,outext=.png}]{standalone}
+\documentclass[convert={density=300,size=500x300,outext=.png}]{standalone}
 % \documentclass{standalone}
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows}
@@ -11,25 +11,21 @@
 \tikzstyle{input} = [coordinate]
 \tikzstyle{output} = [coordinate]
 \begin{tikzpicture}[auto, node distance=2cm, >=latex']
-  \matrix[row sep=2em, column sep=3.5em] {
+  \matrix[row sep=2em, column sep=3em] {
     % first row
-    \node [block] (input) {node}; & 
+    \node [input] (input) {}; & 
     \node [multiply] (B) {$B'$}; & 
     \node [point] (sum) {} ; & 
-    \node [block] (neurons) {ens}; &
     \node [block] (sys) {$h(t)$}; & 
     \node [point] (output split) {}; & 
-    \node [block] (neurons2) {target}; &
     \node [output] (output) {}; \\
     % second row 
-    & & & & \node [multiply] (A) {$A'$}; & & & \\
+    & & & \node [multiply] (A) {$A'$}; & & \\
   };
-  \draw [->] (input) -- node [text width=1cm] {$u(t)$ ss value} (B);
-  \draw (B) -- node {ss value} (neurons);
-  \draw [->] (sum) -- (neurons);
-  \draw [->] (neurons) -- node [text width=1cm] {decoded spikes} (sys);
-  \draw [->] (sys) -- node [text width=1.2cm] {$x(t)$ ss value} (neurons2);
-  \draw [->] (neurons2) -- (output);
+  \draw [->] (input) -- node {$u(t)$} (B);
+  \draw (B) -- (sum);
+  \draw [->] (sum) -- (sys);
+  \draw [->] (sys) -- node {$x(t)$} (output);
   \draw [->] (output split) |- (A);
   \draw [->] (A) -| (sum);
 \end{tikzpicture} 
