--- a/design/figures/dyn_nengo_in_syn.tex
+++ b/design/figures/dyn_nengo_in_syn.tex
@@ -1,4 +1,4 @@
-\documentclass[convert={density=300,size=800x300,outext=.png}]{standalone}
+\documentclass[convert={density=300,size=1000x300,outext=.png}]{standalone}
 % \documentclass{standalone}
 \usepackage{tikz}
 \usetikzlibrary{shapes, arrows}
@@ -14,20 +14,22 @@
   \matrix[row sep=2em, column sep=3.5em] {
     % first row
     \node [block] (input) {Node}; & 
+    \node [block] (in syn) {$h(t)$}; &
     \node [multiply] (B) {$B'$}; & 
     \node [point] (sum) {} ; & 
     \node [block] (neurons) {Ens}; &
-    \node [block] (syn) {$h(t)$}; & 
+    \node [block] (sys) {$h(t)$}; & 
     \node [point] (output split) {}; & 
     \node [block] (probe) {Probe}; \\
     % second row 
-    & & & & \node [multiply] (A) {$A'$}; & & & \\
+    & & & & & \node [multiply] (A) {$A'$}; & & & \\
   };
-  \draw [->] (input) -- node {$u(t)$} (B);
+  \draw [->] (input) -- node {$u(t)$} (in syn);
+  \draw [->] (in syn) -- (B);
   \draw (B) -- (neurons);
   \draw [->] (sum) -- (neurons);
-  \draw [->] (neurons) -- node [text width=1cm] {decoded spikes} (syn);
-  \draw [->] (syn) -- node {$x(t)$} (probe);
+  \draw [->] (neurons) -- node [text width=1cm] {decoded spikes} (sys);
+  \draw [->] (sys) -- node [text width=1cm] {$x(t)$} (probe);
   \draw [->] (output split) |- (A);
   \draw [->] (A) -| (sum);
 \end{tikzpicture} 
