add to dynamics discussion

--- a/design/NEF_dynamics_vs_adaptation.ipynb
+++ b/design/NEF_dynamics_vs_adaptation.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:49df2e29ca0c481e9edea5b8971e0614148a0a602e562c838aea5d05a3ee93b2"
+  "signature": "sha256:9595a142b7dcaeee1bd8b2469df6ae02a9650a1a465f7026c3bed012605dcf53"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -558,9 +558,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The network implements the desired system dynamics. Controlling for the RMSE, we see that we can use lower spike rates but _only up to a point_. When $|A'|>1$ we no longer see reduction in firing rates to maintain the Also note how spiky the Ensemble input becomes as the system time constant drops below the synaptic time constant. To accomodate the excursions of the Ensemble input, we must increase the Ensemble radius.\n",
+      "The network implements the desired system dynamics. Controlling for the RMSE, we see that we can use lower spike rates but _only up to a point_. When $|A'|>1$ we no longer see reduction in firing rates to maintain the same RMSE. \n",
       "\n",
-      "The Ensemble's input represents $A'x(t)+B'u(t)$, so the large spikes in the Ensemble's input result from a large input gain $B'=\\frac{\\tau}{\\tau_{sys}}$. As $\\tau_{sys}$ decreases relative to the synaptic $\\tau$, $B'$ increases. When $B'$ is large, a sudden change in system input $u(t)$ produces a large change in the Ensemble's input until the decoded $x(t)$ can catch up. The [Appendix](#Avoid-large-input-transients-by-rescaling-the-system) describes one method to avoid the large input transients."
+      "Also note how spiky the Ensemble input becomes as the system time constant drops below the synaptic time constant. To accomodate the excursions of the Ensemble input, we increase the Ensemble radius. The Ensemble input represents $A'x(t)+B'u(t)$, so the large spikes in the Ensemble's input result from a large input gain $B'=\\frac{\\tau}{\\tau_{sys}}$. As $\\tau_{sys}$ decreases relative to the synaptic $\\tau$, $B'$ increases. When $B'$ is large, a sudden change in system input $u(t)$ produces a large change in the Ensemble's input until the decoded $x(t)$ can catch up. The [Appendix](#Avoid-large-input-transients-by-rescaling-the-system) describes one method to avoid the large input transients."
      ]
     },
     {
